# OpenArray

./: .gitignore  ArgumentParser.cpp  ArgumentParser.hpp  Array.cpp  Array.hpp  ArrayPool.hpp  Boundary.cpp  Boundary.hpp  BoundaryPool.hpp  Box.cpp  Box.hpp  CUDA.cpp  CUDA.hpp  Diagnosis.cpp  Diagnosis.hpp  Expression.cpp  Function.cpp  Function.hpp  GpuKernels.hpp  Grid.cpp  Grid.hpp  Grid_Distance.cpp  IO.cpp  IO.hpp  Init.cpp  Init.hpp  Internal.cpp  Internal.hpp  InternalGpu.cu  Jit.hpp  Jit_Driver.hpp  Jit_Driver.osx.hpp  Kernel.cpp  Kernel.hpp  MPI.cpp  MPI.hpp  Makefile.am  Makefile.in  Makefile.intel  Makefile.mpich  (+56 more)
c-interface/: c_oa_cache.cpp  c_oa_debug.cpp  c_oa_grid.cpp  c_oa_init.cpp  c_oa_io.cpp  c_oa_ops.cpp  c_oa_ops.hpp  c_oa_option.cpp  c_oa_partition.cpp  c_oa_set.cpp  c_oa_set_with_mask.cpp  c_oa_shift.cpp  c_oa_shift.hpp  c_oa_sub.cpp  c_oa_type.cpp  c_oa_type.hpp  c_oa_utils.cpp  c_oa_utils.hpp  dependency.inc
doc/: README
docs/en/: MacOS-mpich.md  centos-mpich.md  centos-openmpi.md  debian-mpich.md  debian-openmpi.md  fedora-mpich.md  fedora-openmpi.md  macos-openmpi.md  opensuse-mpich.md  opensuse-openmpi.md  ubuntu-mpich.md  ubuntu-openmpi.md
docs/zh/: build_binaries.md  build_by_docker.md  build_dependencies.md  build_openarray.md  docker-in-docker.md  home.md  install_from_scratch.md  setup-builder-centos.md  setup-builder-ubuntu.md
examples/: oa_main.F90
fortran/: NodeTypeF.fypp  config.h  fortran_main.F90  oa_cache.F90  oa_cache.d  oa_init.d  oa_interpolation.F90  oa_interpolation.d  oa_io.F90  oa_main.F90  oa_mat_mult.F90  oa_mat_mult.d  oa_min_max.F90  oa_min_max.d  oa_mod.F90  oa_mpi.F90  oa_mpi.d  oa_ops.F90  oa_ops.fypp  oa_option.F90  oa_partition.F90  oa_partition.d  oa_rep.F90  oa_set.F90  oa_set_with_mask.F90  oa_shift.F90  oa_sub.F90  oa_sum.F90  oa_sum.d  oa_test.F90  oa_type.F90  oa_type.fypp  oa_utils.F90  tmp.txt
jit/: Jit.hpp
modules/basic/: c_new_node.cpp  internal.hpp  kernel.cpp  kernel.hpp  new_node.cpp  new_node.hpp
modules/interpolation/: kernel.cpp
modules/mat_mult/: kernel.cpp  kernel.hpp
modules/min_max/: internal.hpp  kernel.cpp  kernel.hpp  new_node.cpp  new_node.hpp  new_node_simple.cpp
modules/operator/: c_new_node.cpp  internal.hpp  kernel.cpp  kernel.hpp  kernel_type.fypp  new_node.cpp  new_node.hpp
modules/rep/: kernel.cpp  kernel.hpp  new_node_simple.cpp
modules/set/: new_node.cpp  new_node.hpp
modules/shift/: c_new_node.cpp  kernel.cpp  kernel.hpp  new_node.cpp  new_node.hpp
modules/sub/: c_new_node.cpp  kernel.cpp  new_node.cpp  new_node.hpp
modules/sum/: internal.hpp  internalGpu.cu  kernel.cpp  kernel.hpp  new_node.cpp  new_node.hpp
modules/tree_tool/: NodeVec.cpp  Simple_Node.cpp  Simple_Node.hpp  kernel.hpp
scalapack/: pdmatgen.f  pdpblasdriver.f
scripts/: build-by-docker.sh  build.sh
scripts/docker-build/centos7/: builder.Dockerfile
src/: ArgumentParser.hpp  Array.hpp  ArrayPool.hpp  Box.cpp  Diagnosis.cpp  Diagnosis.hpp  Function.cpp  GpuKernels.cu  Grid.cpp  IO.hpp  Init.hpp  InternalGpu.hpp  Jit_Driver.hpp  MPI.cpp  Node.hpp  NodePool.hpp  Operator.hpp  TreeRootDict.cpp  common.cpp  except.hpp  log.cpp  op_define.hpp
src/c-interface/: c_oa_cache.cpp  c_oa_cache.hpp  c_oa_init.cpp  c_oa_option.cpp  c_oa_set.cpp  c_oa_type.cpp  c_oa_type.hpp  c_oa_utils.cpp  c_simple_type.cpp  c_simple_type.hpp
src/fortran/: config.h  oa_cache.F90  oa_init.F90  oa_io.d  oa_min_max.F90  oa_mod.F90  oa_mod.d  oa_mpi.F90  oa_option.F90  oa_option.d  oa_rep.d  oa_set.d  oa_set_with_mask.d  oa_shift.F90  oa_shift.d  oa_sub.F90  oa_sub.d  oa_type.F90  oa_type.d  oa_utils.F90  oa_utils.d
src/modules/basic/: c_new_node.cpp  c_new_node_simple.cpp  kernel.cpp  new_node.cpp
src/modules/interpolation/: kernel.hpp
src/modules/min_max/: internalGpu.cu  internalGpu.hpp  kernel.cpp
src/modules/operator/: c_simple_node.cpp  internal.hpp  kernel.cpp  kernel.hpp  new_node.cpp
src/modules/shift/: kernel.cpp  new_node.hpp  new_node_simple.cpp
src/modules/sub/: c_new_node.cpp  new_node_simple.cpp
src/modules/sum/: c_new_node.cpp  internalGpu.hpp  kernel.cpp  kernel.hpp  new_node.cpp  new_node_simple.cpp
src/modules/tree_tool/: NodeVec.hpp  new_node.hpp  oa_vector.hpp
src/scalapack/: pdpblasinfo.f  pmatgeninc.f
src/test/: oa_test.F90  test.hpp
src/utils/: calcTime.cpp  utils.cpp  utils.hpp
test/: main.cpp  oa_main.F90  oa_main.F90.old  oa_test.F90  test.cpp  test.hpp  test_argumentparser.cpp  test_oa.F90
unittest/: gtest_main.cpp  test_array.cpp  test_perf.cpp
user-manual/: oa_main.F90
utils/: Makefile  calcTime.cpp  calcTime.hpp  gettimeofday.c  gettimeofday.cpp  gettimeofday.h  to_type.hpp  utils.cpp  utils.hpp
